# competis

./: .gitignore  README.md  main.py  pyproject.toml
AerosolOpticalDepthEstimation/: 00_data_exploration.ipynb  01_baseline.ipynb  02_submission.ipynb  03_submission_tta.ipynb  04_submission_cv.ipynb  README.md  cv.yml  cv_ft.yml  cv_mlp.yml  da.yml  da_mlp.yml  debug.yml  ft.yml  lrsch.yml  main.py
Contrails/: 00_data_exploration.ipynb  01_baseline.ipynb  02_submission.ipynb  03_custom_unet.ipynb  04_da.ipynb  05_time_series.ipynb  06_cv.ipynb  07_error_analysis.ipynb  08_model_debug.ipynb  09_compare_dataset.ipynb  10_hough.ipynb  README.md  all_r34.yml  baseline.yml  convextv2_384.yml  convextv2_384_scratch.yml  convextv2_512.yml  convextv2_base.yml  convextv2_crops.yml  convextv2_cutmix.yml  convextv2_flips.yml  convextv2_freeze.yml  convextv2_sch.yml  da.yml  debug.yml  fc.yml  fc_maxi.yml  fc_maxi2.yml  fc_maxi3.yml  fc_maxi4.yml  fc_maxi5.yml  fc_post_r34.yml  fc_pre_r34.yml  fc_t158_r34.yml  fc_t456_r18_512.yml  fc_t456_resnest26d.yml  fc_t5_convnextv2_base_512.yml  fc_t5_efficientnet_b0_da.yml  fc_t5_efficientnet_b0_da2_512.yml  fc_t5_efficientnet_b0_da_512.yml  (+47 more)
EnhancedSentinel2Agriculture/: 00_data_exploration.ipynb  01_baseline.ipynb  02_metric.ipynb  03_unet.ipynb  03_unet.py  03_unet.yml  03_unet_debug.py  04_submission.ipynb  05_conv_lstm.ipynb  05_convlstm.py  06_unet_lstm.ipynb  06_unetlstm.py  06_unetlstm.yml  README.md  debug.yml  debug_convlstm.yml  debug_unetlstm.yml
FindingMiningSites/: 00_data_exploration.ipynb  01_baseline.ipynb  README.md  (+19 more)
(+396 files in other folders)
