[project]
name = "competis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "einops>=0.8.2",
    "jupyter>=1.1.1",
    "lightning>=2.6.5",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "pandas>=3.0.3",
    "protobuf>=3.20,<5",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "segmentation-models-pytorch>=0.5.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
